# instant-mcp

./: README.md  adsf.md  pyproject.toml  simple.py
.cursor/: mcp.json
docs/: creating-servers.md  cursor-ai-usage.md  git-workflow.md  installation.md
instant_servers/: github.py  math_mcp.py  text.py
src/instant_mcp/: __init__.py  config.py  discovery.py  export.py  main.py  protocol.py  server_builder.py
